Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-127

Fix Coverity bug report

VotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.3.0
    • C++
    • None

    Description

      CID 173749: Uninitialized members (UNINIT_CTOR)
      /c++/src/Reader.cc: 259 in orc::RowReaderImpl::RowReaderImpl(std::shared_ptr<orc::FileContents>, const orc::RowReaderOptions &)()
      253 } else

      { 254 previousRow = firstRowOfStripe[firstStripe]-1; 255 }

      256
      257 ColumnSelector column_selector(contents.get());
      258 column_selector.updateSelected(selectedColumns, options);
      >>> CID 173749: Uninitialized members (UNINIT_CTOR)
      >>> Non-static class member "rowsInCurrentStripe" is not initialized in this constructor nor in any functions that it calls.
      259 }
      260
      261 const RowReaderOptions& RowReaderImpl::getRowReaderOptions() const

      { 262 return options; 263 }

      264

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            mdeepak Deepak Majeti
            mdeepak Deepak Majeti
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment