ORC-127: Fix Coverity bug report